<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".SecondScreen">


    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Pass"
        android:textColor="#000000"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.025" />

    <Button
        android:id="@+id/back_button"
        android:layout_width="28dp"
        android:layout_height="19dp"
        android:layout_marginTop="3dp"
        android:background="@drawable/ic_baseline_close_24"
        app:backgroundTint="#4B4A4A"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textView12"
        app:layout_constraintHorizontal_bias="0.123"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.025" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/circularRevealCardView"
        android:layout_width="366dp"
        android:layout_height="160dp"
        android:layout_marginTop="68dp"
        app:cardBackgroundColor="#FE4D47"
        app:cardCornerRadius="20sp"
        app:cardElevation="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="41dp"
            android:layout_height="45dp"
            android:layout_marginStart="18dp"
            android:layout_marginLeft="18dp"
            android:layout_marginTop="20dp"
            android:scaleType="centerCrop"
            android:src="@drawable/avatar_1" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="67dp"
            android:layout_marginLeft="67dp"
            android:layout_marginTop="20dp"
            android:text="@string/Nora"
            android:textColor="#FFFFFF" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginBottom="20dp"
            android:text="@string/robin"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            android:textSize="23sp"
            android:textStyle="bold|italic" />
    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="256dp"
        android:text="@string/Note"
        android:textColor="#4B4A4A"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/materialCardView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.059"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/materialCardView4"
        android:layout_width="366dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="284dp"
        app:cardBackgroundColor="#FFFFFF"
        app:cardCornerRadius="20sp"
        app:cardElevation="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.407"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="10dp"
            android:text="@string/Notes_content"
            android:textColor="#000000"
            android:textSize="18sp"
            android:textStyle="bold" />
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="366dp"
        android:layout_height="200dp"
        android:layout_marginTop="428dp"
        android:background="#FFFFFF"
        android:visibility="visible"
        app:cardBackgroundColor="#FFFFFF"
        app:cardCornerRadius="20sp"
        app:cardElevation="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <View
            android:id="@+id/view4"
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_marginTop="120dp"
            android:background="#DCD9D9" />

        <View
            android:id="@+id/view3"
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_marginTop="80dp"
            android:background="#DCD9D9" />

        <View
            android:id="@+id/view"
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_marginTop="40dp"
            android:background="#DCD9D9" />

        <TextView
            android:id="@+id/textView17"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:text="@string/location"
            android:textColor="#000000"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="50dp"
            android:text="@string/work_area"
            android:textColor="#000000"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView19"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="90dp"
            android:text="@string/desk_pass_details"
            android:textColor="#000000"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="130dp"
            android:text="@string/schedule"
            android:textColor="#000000"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/current_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginRight="15dp"
            android:text="@string/default_location"
            android:textColor="#4B4A4A" />

        <TextView
            android:id="@+id/textView24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="15dp"
            android:layout_marginRight="15dp"
            android:text="@string/work_type"
            android:textColor="#4B4A4A" />

        <TextView
            android:id="@+id/map_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="90dp"
            android:layout_marginEnd="15dp"
            android:layout_marginRight="15dp"
            android:drawableEnd="@drawable/ic_baseline_arrow_map_intent"
            android:drawableRight="@drawable/ic_baseline_arrow_map_intent"
            android:drawablePadding="4dp"
            android:text="@string/map_intent"
            android:textColor="#000000"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/drop_down"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginEnd="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="40dp"
            android:background="@android:drawable/editbox_background"
            android:drawableEnd="@drawable/ic_baseline_keyboard_arrow_down_24"
            android:hint="Select Day"
            android:textColor="#FFFFFF"
            android:textColorHint="#000000" />

    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/textView21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="400dp"
        android:text="@string/office_info"
        android:textColor="#4B4A4A"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.062"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>