<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".FirstScreen">


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/circularRevealCardView"
        android:layout_width="366dp"
        android:layout_height="160dp"
        android:layout_marginTop="16dp"
        app:cardBackgroundColor="#FE4D47"
        app:cardCornerRadius="20sp"
        app:cardElevation="5dp"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.644"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="41dp"
            android:layout_height="45dp"
            android:layout_marginStart="18dp"
            android:layout_marginLeft="18dp"
            android:layout_marginTop="20dp"
            android:scaleType="centerCrop"
            android:src="@drawable/avatar_1" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="67dp"
            android:layout_marginLeft="67dp"
            android:layout_marginTop="20dp"
            android:text="@string/Nora"
            android:textColor="#FFFFFF" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="67dp"
            android:layout_marginLeft="67dp"
            android:layout_marginTop="38dp"
            android:text="@string/nora_address"
            android:textColor="#FFFFFF"
            android:textSize="10sp" />

        <Button
            android:id="@+id/info_button"
            android:layout_width="20dp"
            android:layout_height="18dp"
            android:layout_gravity="end"
            android:layout_marginTop="19dp"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/ic_baseline_info"
            android:text="Button" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginBottom="20dp"
            android:text="@string/robin"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            android:textSize="23sp"
            android:textStyle="bold|italic" />
    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="188dp"
        android:text="Today, June 11"
        android:textColor="#444343"
        android:textSize="15sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.075"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/circularRevealCardView2"
        android:layout_width="366dp"
        android:layout_height="163dp"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:paddingBottom="10dp"
        android:visibility="visible"
        app:cardBackgroundColor="#FFFFFF"
        app:cardCornerRadius="20sp"
        app:cardElevation="5dp"
        app:contentPaddingBottom="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.875"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/circularRevealCardView"
        app:layout_constraintVertical_bias="0.091">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="353dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="7dp"
            android:layout_marginEnd="6dp"
            android:layout_marginRight="6dp"
            android:text="@string/engineering_product"
            android:textColor="#262626"
            android:textSize="17sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="222dp"
            android:layout_height="31dp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="33dp"
            android:text="@string/meeting"
            android:textColor="#5B5959"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="56dp"
            android:drawableLeft="@drawable/ic__7ad8f4e64187a5c7f9c92239bd57d55"
            android:drawablePadding="2dp"
            android:text="@string/office"
            android:textColor="#4B4A4A" />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="75dp"
            android:elevation="4dp"
            android:text="Add a space"
            android:textColor="#000000"
            android:textSize="12sp"
            app:backgroundTint="#FFFFFF" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="12dp"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="125dp"
            android:orientation="horizontal" />

    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableEnd="@drawable/ic_baseline_arrow_forward_24"
        android:text="@string/event"
        android:textColor="#4B4A4A"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/circularRevealCardView2"
        app:layout_constraintVertical_bias="0.029"
        android:drawableRight="@drawable/ic_baseline_arrow_forward_24" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/plan"
        android:textColor="#4B4A4A"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="@+id/textView6"
        app:layout_constraintHorizontal_bias="0.112"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/materialCardView"
        android:layout_width="366dp"
        android:layout_height="100dp"
        app:cardBackgroundColor="#FFFFFF"
        app:cardCornerRadius="20sp"
        app:cardElevation="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.644"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7"
        app:layout_constraintVertical_bias="0.055">

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="7dp"
            android:text="@string/desk"
            android:textColor="#000000"
            android:textColorHint="#000000"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="30dp"
            android:drawableStart="@drawable/ic_baseline_people_24"
            android:drawableLeft="@drawable/ic_baseline_people_24"
            android:drawablePadding="4dp"
            android:text="@string/team_mates"
            android:textColor="#4B4A4A" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="60dp"
            android:layout_marginBottom="2dp"
            android:orientation="horizontal" />


    </com.google.android.material.card.MaterialCardView>


</androidx.constraintlayout.widget.ConstraintLayout>
